--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME='Secure Streams converter'
 APP_ENV=local
 APP_KEY=base64:hiaOlgOTZG5xgA3mi9XxiL6XprtsJtdKJz0xlV9ZrAM=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
